--- a/Project.toml
+++ b/Project.toml
@@ -1,12 +1,14 @@
-name = "PackageBundler"
+name = "AppBundler"
 uuid = "40eb83ae-c93a-480c-8f39-f018b568f472"
 authors = ["Janis Erdmanis <janiserdmanis@protonmail.ch>"]
 version = "0.1.0"
 
 [deps]
+Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Tar = "a4e569a6-e804-4fa4-b0f3-eef7a1d5b13e"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
