--- a/Project.toml
+++ b/Project.toml
@@ -12,3 +12,4 @@ Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Tar = "a4e569a6-e804-4fa4-b0f3-eef7a1d5b13e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+squashfs_tools_jll = "eed32e3e-a7c5-5bf9-9121-5cf3ab653887"
