--- a/templates/linux/main.desktop
+++ b/templates/linux/main.desktop
@@ -1,6 +1,9 @@
 [Desktop Entry]
-Name={{:APP_NAME}}
-Exec={{:APP_NAME}}
+Name={{APP_DISPLAY_NAME}}
+Exec={{APP_NAME}}
 Icon=${SNAP}/meta/icon.png
+Version={{APP_VERSION}}
+Comment={{APP_SUMMARY}}
+Terminal=false
 Type=Application
 Categories=Utility;
