--- a/recepies/linux/snap.yaml
+++ b/recepies/linux/snap.yaml
@@ -4,7 +4,7 @@ version: '{{APP_VERSION}}'
 summary: {{APP_SUMMARY}} 
 description: {{APP_DESCRIPTION}} #A longer description of my app.
 grade: devel
-confinement: classic # devmode
+confinement: classic 
 
 apps:
   {{APP_NAME}}:
@@ -25,4 +25,3 @@ hooks:
       - opengl
       - wayland
 
-plugs:
