--- a/Project.toml
+++ b/Project.toml
@@ -7,13 +7,23 @@ version = "0.1.0"
 Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
-Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Scratch = "6c6a2e73-6563-6170-7368-637461726353"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Tar = "a4e569a6-e804-4fa4-b0f3-eef7a1d5b13e"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 p7zip_jll = "3f19e933-33d8-53b3-aaab-bd5110c3b7a0"
 squashfs_tools_jll = "eed32e3e-a7c5-5bf9-9121-5cf3ab653887"
+
+[compat]
+CedecZlib = "0.7"
+Mustache = "1"
+Scratch = "1.2"
+ZipFile = "0.1"
+squashfs_tools_jll = "4.6"
+Downloads = "1.6"
+Pkg = "1.9"
+TOML = "1"
+Tar = "1"
+p7zip_jll = "17.4"
