--- a/Project.toml
+++ b/Project.toml
@@ -28,3 +28,9 @@ TOML = "1"
 Tar = "1"
 p7zip_jll = "17.4"
 julia = "1"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
