--- a/recipes/macos/Entitlements.plist
+++ b/recipes/macos/Entitlements.plist
@@ -32,5 +32,10 @@
     <key>com.apple.security.get-task-allow</key>
     <true/>
 
+    <key>com.apple.security.temporary-exception.mach-lookup.global-name</key>
+    <array>
+      <string>com.apple.coreservices.launchservicesd</string>
+    </array>
+
   </dict>
 </plist>
