--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ authors = ["Janis Erdmanis <janiserdmanis@protonmail.ch>"]
 version = "0.1.5"
 
 [deps]
+AppBundlerUtils_jll = "20612f45-4fe6-500a-af5c-19078bfe0d65"
 Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
+Clang_jll = "0ee61d77-7f21-5576-8119-9fcc46b10100"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
@@ -13,10 +15,14 @@ Scratch = "6c6a2e73-6563-6170-7368-637461726353"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Tar = "a4e569a6-e804-4fa4-b0f3-eef7a1d5b13e"
 ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
+libdmg_hfsplus_jll = "a9dd9d48-4682-593d-95c5-5ff28a9e156e"
 p7zip_jll = "3f19e933-33d8-53b3-aaab-bd5110c3b7a0"
+rcodesign_jll = "81561df1-22b2-57e5-9f67-03318e1fa9d9"
 squashfs_tools_jll = "eed32e3e-a7c5-5bf9-9121-5cf3ab653887"
+xorriso_jll = "d819d522-00bd-563b-9db9-92c29ec39f9c"
 
 [compat]
+Clang_jll = "16.0.6"
 CodecZlib = "0.7"
 Downloads = "1.6"
 Mustache = "1"
@@ -26,5 +32,7 @@ TOML = "1"
 Tar = "1"
 ZipFile = "0.10"
 julia = "1"
+libdmg_hfsplus_jll = "0.5.0"
 p7zip_jll = "17.4"
+rcodesign_jll = "0.29.0"
 squashfs_tools_jll = "4.6"
