--- a/Project.toml
+++ b/Project.toml
@@ -13,14 +13,15 @@ Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Scratch = "6c6a2e73-6563-6170-7368-637461726353"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Tar = "a4e569a6-e804-4fa4-b0f3-eef7a1d5b13e"
+Xorriso_jll = "0906d627-f1e8-5757-b67e-5a72ed64a995"
 ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 libdmg_hfsplus_jll = "a9dd9d48-4682-593d-95c5-5ff28a9e156e"
 p7zip_jll = "3f19e933-33d8-53b3-aaab-bd5110c3b7a0"
 rcodesign_jll = "81561df1-22b2-57e5-9f67-03318e1fa9d9"
 squashfs_tools_jll = "eed32e3e-a7c5-5bf9-9121-5cf3ab653887"
-xorriso_jll = "d819d522-00bd-563b-9db9-92c29ec39f9c"
 
 [compat]
+AppBundlerUtils_jll = "0.1.5"
 CodecZlib = "0.7"
 Downloads = "1.6"
 Mustache = "1"
@@ -28,9 +29,16 @@ Pkg = "1.9"
 Scratch = "1.2"
 TOML = "1"
 Tar = "1"
+Xorriso_jll = "1.5.6"
 ZipFile = "0.10"
 julia = "1"
 libdmg_hfsplus_jll = "0.5.0"
 p7zip_jll = "17.4"
 rcodesign_jll = "0.29.0"
 squashfs_tools_jll = "4.6"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
