--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -16,11 +16,6 @@ jobs:
     
     steps:
       - uses: actions/checkout@v3
-      - name: Setup macOS codesign
-        if: runner.os == 'macOS'
-        run: |
-          # Verify codesign is available
-          codesign --version || echo "codesign tool not found"
       - uses: julia-actions/setup-julia@v1
         with:
           version: '1.11'
@@ -28,6 +23,8 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v3
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           file: lcov.info
