--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Scratch = "6c6a2e73-6563-6170-7368-637461726353"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Tar = "a4e569a6-e804-4fa4-b0f3-eef7a1d5b13e"
+UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 Xorriso_jll = "0906d627-f1e8-5757-b67e-5a72ed64a995"
 ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 libdmg_hfsplus_jll = "a9dd9d48-4682-593d-95c5-5ff28a9e156e"
@@ -33,6 +34,7 @@ Random = "1.11.0"
 Scratch = "1.2"
 TOML = "1"
 Tar = "1"
+UUIDs = "1.11.0"
 Xorriso_jll = "1.5.6"
 ZipFile = "0.10"
 julia = "1"
