DS_Store templating work

--- a/Project.toml
+++ b/Project.toml
@@ -8,10 +8,13 @@ AppBundlerUtils_jll = "20612f45-4fe6-500a-af5c-19078bfe0d65"
 Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
 Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Scratch = "6c6a2e73-6563-6170-7368-637461726353"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Tar = "a4e569a6-e804-4fa4-b0f3-eef7a1d5b13e"
@@ -27,10 +30,13 @@ squashfs_tools_jll = "eed32e3e-a7c5-5bf9-9121-5cf3ab653887"
 AppBundlerUtils_jll = "0.1.5"
 Base64 = "1.11.0"
 CodecZlib = "0.7"
+Conda = "1.10.2"
 Downloads = "1.6"
 Mustache = "1"
 Pkg = "1.9"
+PyCall = "1.96.4"
 Random = "1.11.0"
+SafeTestsets = "0.1.0"
 Scratch = "1.2"
 TOML = "1"
 Tar = "1"
