--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,9 @@ Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Makemsix_jll = "92e7c7cf-2c17-5ab8-9563-5ab5b2fcee8a"
 Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
 OpenSSL_jll = "458c3c95-2e84-50aa-8efc-19380b2a3a95"
@@ -34,8 +37,12 @@ Base64 = "1.11.0"
 CodecZlib = "0.7"
 Conda = "1.10.2"
 Downloads = "1.6"
+FileIO = "1.17.0"
+ImageTransformations = "0.10.2"
+Images = "0.26.2"
+Makemsix_jll = "1.7.241"
 Mustache = "1"
-OpenSSL_jll = "3.5.0"
+OpenSSL_jll = "3.0.16"
 Pkg = "1.9"
 PyCall = "1.96.4"
 Random = "1.11.0"
