Implementing MSIX packaging via makemsix and osslsigncode (#17)
* initial implementation of repack

* fixing subject field for self signed msix certificates

* refactoring

* msix tests

* windows fix

* more debugging

* icons and subsystem toggle for windows

* adding msix to tests

* updating docs

* updating version

---------

Co-authored-by: Janis Erdmanis <janiserdmanis@protonmail.ch>

--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "AppBundler"
 uuid = "40eb83ae-c93a-480c-8f39-f018b568f472"
 authors = ["Janis Erdmanis <janiserdmanis@protonmail.ch>"]
-version = "0.2.2"
+version = "0.3.0"
 
 [deps]
 AppBundlerUtils_jll = "20612f45-4fe6-500a-af5c-19078bfe0d65"
@@ -10,7 +10,12 @@ Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+Makemsix_jll = "92e7c7cf-2c17-5ab8-9563-5ab5b2fcee8a"
 Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
+OpenSSL_jll = "458c3c95-2e84-50aa-8efc-19380b2a3a95"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -21,6 +26,7 @@ UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 Xorriso_jll = "0906d627-f1e8-5757-b67e-5a72ed64a995"
 ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 libdmg_hfsplus_jll = "a9dd9d48-4682-593d-95c5-5ff28a9e156e"
+osslsigncode_jll = "5a7615ae-274c-51d1-b5a8-ff30401c2c7e"
 p7zip_jll = "3f19e933-33d8-53b3-aaab-bd5110c3b7a0"
 rcodesign_jll = "81561df1-22b2-57e5-9f67-03318e1fa9d9"
 squashfs_tools_jll = "eed32e3e-a7c5-5bf9-9121-5cf3ab653887"
@@ -31,7 +37,12 @@ Base64 = "1.11.0"
 CodecZlib = "0.7"
 Conda = "1.10.2"
 Downloads = "1.6"
+FileIO = "1.17.0"
+ImageTransformations = "0.10.2"
+Images = "0.26.2"
+Makemsix_jll = "1.7.241"
 Mustache = "1"
+OpenSSL_jll = "3.0.16"
 Pkg = "1.9"
 PyCall = "1.96.4"
 Random = "1.11.0"
@@ -43,13 +54,14 @@ Xorriso_jll = "1.5.6"
 ZipFile = "0.10"
 julia = "1"
 libdmg_hfsplus_jll = "0.5.0"
+osslsigncode_jll = "2.9.0"
 p7zip_jll = "17.4"
 rcodesign_jll = "0.29.0"
 squashfs_tools_jll = "4.6"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test", "SafeTestsets"]
