--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -15,7 +15,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         include:
           - os: ubuntu-latest
-            prefix: DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24'
+            prefix: xvfb-run -s '-screen 0 1024x768x24'
     
     steps:
       - uses: actions/checkout@v3
@@ -32,6 +32,8 @@ jobs:
       - uses: julia-actions/julia-runtest@v1
         with:
           prefix: ${{ matrix.prefix }}
+        env:
+          DISPLAY: ":0"
       - uses: julia-actions/julia-processcoverage@v1
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
