--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
+ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
 Makemsix_jll = "92e7c7cf-2c17-5ab8-9563-5ab5b2fcee8a"
 Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
@@ -39,6 +40,7 @@ Conda = "1.10.2"
 Downloads = "1.6"
 FileIO = "1.17.0"
 ImageCore = "0.10.5"
+ImageIO = "0.6.9"
 ImageTransformations = "0.10.2"
 Makemsix_jll = "1.7.241"
 Mustache = "1"
