fixing snap bug

--- a/recipes/linux/main.desktop
+++ b/recipes/linux/main.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name={{APP_DISPLAY_NAME}}
-Exec={{APP_NAME}}
+Exec={{APP_NAME_LOWERCASE}}
 Icon=${SNAP}/meta/icon.png
 Version={{APP_VERSION}}
 Comment={{APP_SUMMARY}}
