--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -23,17 +23,29 @@ jobs:
       - name: Install Linux GUI dependencies
         if: runner.os == 'Linux'
         run: sudo apt-get update && sudo apt-get install -y xvfb libgtk-4-dev
+      
+      - name: Remove system OpenSSL from PATH (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          $newPath = ($env:PATH -split ';' | Where-Object { $_ -notlike '*OpenSSL*' }) -join ';'
+          echo "PATH=$newPath" >> $env:GITHUB_ENV
+        shell: pwsh
         
       - uses: julia-actions/setup-julia@v1
         with:
           version: '1.11'
       - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@v1
+        env:
+          OPENSSL_CONF: ""
+          OPENSSL_MODULES: ""
       - uses: julia-actions/julia-runtest@v1
         with:
           prefix: ${{ matrix.prefix }}
         env:
           DISPLAY: ":0"
+          OPENSSL_CONF: ""
+          OPENSSL_MODULES: ""
       - uses: julia-actions/julia-processcoverage@v1
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
