fix examples and add staging test

--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.4.0"
 AppBundlerUtils_jll = "20612f45-4fe6-500a-af5c-19078bfe0d65"
 Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
 Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
+CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
@@ -21,6 +22,7 @@ PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Scratch = "6c6a2e73-6563-6170-7368-637461726353"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
+Tar = "a4e569a6-e804-4fa4-b0f3-eef7a1d5b13e"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 Xorriso_jll = "0906d627-f1e8-5757-b67e-5a72ed64a995"
 libdmg_hfsplus_jll = "a9dd9d48-4682-593d-95c5-5ff28a9e156e"
@@ -31,6 +33,7 @@ squashfs_tools_jll = "eed32e3e-a7c5-5bf9-9121-5cf3ab653887"
 [compat]
 AppBundlerUtils_jll = "0.1.5"
 Base64 = "1.11.0"
+CodecZlib = "0.7.8"
 Conda = "1.10.2"
 Downloads = "1.6"
 FileIO = "1.17.0"
@@ -45,6 +48,7 @@ PyCall = "1.96.4"
 Random = "1.11.0"
 Scratch = "1.2"
 TOML = "1"
+Tar = "1.10.0"
 UUIDs = "1.11.0"
 Xorriso_jll = "1.5.6"
 julia = "1"
