refactoring with args based approach

--- a/recipes/workflows/GitHub.yml
+++ b/recipes/workflows/GitHub.yml
@@ -52,10 +52,8 @@ jobs:
         env: 
           MACOS_PFX_PASSWORD: ${{ secrets.MACOS_PFX_PASSWORD }}
           WINDOWS_PFX_PASSWORD: ${{ secrets.WINDOWS_PFX_PASSWORD }}
-          TARGET_ARCH: ${{ matrix.arch }}
         run: |
-          mkdir -p build
-          ${{ matrix.xvfb && 'xvfb-run -s ''-screen 0 1024x768x24''' || '' }} julia --project=meta meta/build.jl
+          ${{ matrix.xvfb && 'xvfb-run -s ''-screen 0 1024x768x24''' || '' }} julia --project=meta meta/build.jl --target-platform=${{ matrix.os }} --target-arch=${{ matrix.arch }} --build-dir=build
       
       - uses: actions/upload-artifact@v4
         with:
