--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -2,7 +2,7 @@ name: Tests
 
 on:
   push:
-    branches: [main, master, dmg]
+    branches: [main, master, dmg, ci-refactor]
     tags: ['*']
   pull_request:
 
@@ -13,15 +13,43 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
+        include:
+          - os: ubuntu-latest
+            prefix: xvfb-run -s '-screen 0 1024x768x24'
     
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Install Linux GUI dependencies
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt-get install -y xvfb libgtk-4-dev
+      
+      - name: Remove System32 OpenSSL DLLs (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          $system32 = "C:\Windows\System32"
+          
+          foreach ($dll in @("libcrypto-3-x64.dll", "libssl-3-x64.dll")) {
+            $path = Join-Path $system32 $dll
+            if (Test-Path $path) {
+              Remove-Item -Path $path -Force
+              Write-Host "Removed $dll from System32"
+            } else {
+              Write-Host "$dll not found in System32"
+            }
+          }
+        shell: pwsh
+        
       - uses: julia-actions/setup-julia@v1
         with:
           version: '1.11'
       - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
+        with:
+          prefix: ${{ matrix.prefix }}
+        env:
+          DISPLAY: ":0"
       - uses: julia-actions/julia-processcoverage@v1
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
