--- a/examples/glapp/Project.toml
+++ b/examples/glapp/Project.toml
@@ -5,3 +5,4 @@ version = "0.0.1"
 GLAbstraction = "ca6e7d0a-b0c9-59ca-8aba-aebf11497e1c"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 ModernGL = "66fc600b-dfda-50eb-8b99-91cfa97b1301"
+SignedDistanceFields = "73760f76-fbc4-59ce-8f25-708e95d2df96"
