--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ rcodesign_jll = "81561df1-22b2-57e5-9f67-03318e1fa9d9"
 squashfs_tools_jll = "eed32e3e-a7c5-5bf9-9121-5cf3ab653887"
 
 [compat]
-AppBundlerUtils_jll = "0.1.5"
+AppBundlerUtils_jll = "=0.4.0"
 Base64 = "1.11.0"
 CodecZlib = "0.7.8"
 Conda = "1.10.2"
