fix recompilation due to Statistics

--- a/examples/modjulia/Project.toml
+++ b/examples/modjulia/Project.toml
@@ -5,6 +5,7 @@ version = "25.11.27"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 ConstructionBase = "187b0558-2788-49d3-abe0-74a17ed4e7c9"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
+IntelOpenMP_jll = "1d5cc7b8-4909-519e-a0f8-d0f5ad9712d0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Mods = "7475f97c-0381-53b1-977b-4c60186c8d62"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
