--- a/Project.toml
+++ b/Project.toml
@@ -14,10 +14,13 @@ FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
 ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
+LazyArtifacts = "4af54fe1-eca0-43a8-85a7-787d91b784e3"
+Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 Makemsix_jll = "92e7c7cf-2c17-5ab8-9563-5ab5b2fcee8a"
 Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
 OpenSSL_jll = "458c3c95-2e84-50aa-8efc-19380b2a3a95"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Scratch = "6c6a2e73-6563-6170-7368-637461726353"
@@ -40,10 +43,13 @@ FileIO = "1.17.0"
 ImageCore = "0.10.5"
 ImageIO = "0.6.9"
 ImageTransformations = "0.10.2"
+LazyArtifacts = "1.11.0"
+Libdl = "1.11.0"
 Makemsix_jll = "1.7.241"
 Mustache = "1"
 OpenSSL_jll = "3.5"
 Pkg = "1.9"
+Printf = "1.11.0"
 PyCall = "1.96.4"
 Random = "1.11.0"
 Scratch = "1.2"
