--- a/examples/QMLApp/Project.toml
+++ b/examples/QMLApp/Project.toml
@@ -5,7 +5,10 @@ version = "0.1.0"
 
 [deps]
 QML = "2db162a6-7e43-52c3-8d84-290c1c42d82a"
+AppEnv = "9f11263e-cf0d-4932-bae6-807953dbea74"
 
+[sources]
+AppEnv = {path = "../../AppEnv"}
 
 [bundle]
 APP_DESCRIPTION = "Longer description of the app"
