adding compat for AppEnv

--- a/AppEnv/Project.toml
+++ b/AppEnv/Project.toml
@@ -3,6 +3,9 @@ uuid = "9f11263e-cf0d-4932-bae6-807953dbea74"
 authors = ["Janis Erdmanis <janiserdmanis@protonmail.ch>"]
 version = "0.1.0"
 
+[compat]
+julia = "1"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
