--- a/Project.toml
+++ b/Project.toml
@@ -33,10 +33,8 @@ osslsigncode_jll = "5a7615ae-274c-51d1-b5a8-ff30401c2c7e"
 rcodesign_jll = "81561df1-22b2-57e5-9f67-03318e1fa9d9"
 squashfs_tools_jll = "eed32e3e-a7c5-5bf9-9121-5cf3ab653887"
 
-[sources]
-AppEnv = {path = "AppEnv"}
-
 [compat]
+AppEnv = "0.2.0"
 AppBundlerUtils_jll = "=0.4.0"
 Base64 = "1.11.0"
 CodecZlib = "0.7.8"
