fix repoo tracked packages

--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
 ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
+LibGit2 = "76f85450-5226-5b5a-8eaa-529ad045b433"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 Makemsix_jll = "92e7c7cf-2c17-5ab8-9563-5ab5b2fcee8a"
 Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
@@ -34,8 +35,8 @@ rcodesign_jll = "81561df1-22b2-57e5-9f67-03318e1fa9d9"
 squashfs_tools_jll = "eed32e3e-a7c5-5bf9-9121-5cf3ab653887"
 
 [compat]
-AppEnv = "0.2.0"
 AppBundlerUtils_jll = "=0.4.0"
+AppEnv = "0.2.0"
 Base64 = "1.11.0"
 CodecZlib = "0.7.8"
 Conda = "1.10.2"
@@ -44,6 +45,7 @@ FileIO = "1.17.0"
 ImageCore = "0.10.5"
 ImageIO = "0.6.9"
 ImageTransformations = "0.10.2"
+LibGit2 = "1.11.0"
 Libdl = "1.11.0"
 Makemsix_jll = "1.7.241"
 Mustache = "1"
@@ -70,4 +72,3 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test", "SafeTestsets", "SHA"]
-
